# LEM

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/inc/: lem.h
lib/inc/config/: lem_config.h  lem_config_check.h
lib/inc/interface/: lem_config.h  lem_interface.h
lib/inc/internal/: lem_dispatcher.h  lem_event.h  lem_queue.h  lem_soft_timer.h
lib/inc/platform/: lem_platform.h  lem_platform_cortex_m.h  lem_platform_generic.h
lib/src/: lem.c
lib/src/internal/: lem_dispatcher.c  lem_event.c  lem_queue.c  lem_soft_timer.c
toolchain/: cortex_m.cmake
ut/: CMakeLists.txt  lem_allocation_test.cpp  lem_dispatcher_test.cpp  lem_send_test.cpp  lem_test.cpp  lem_timer_test.cpp
